--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ h1 {
 .background-image {
     height: 100%;
     width: 100%;
-    background-image: url("../imagenes/fondo.svg");
+    background-image: url("../img/fondo.svg");
     position: absolute;
 }
 
