--- a/styles/style.css
+++ b/styles/style.css
@@ -40,8 +40,8 @@ h1 {
 
 .navbar-container__mobile {
     display: none;
-    position: fixed;
-    z-index: 1
+    position: relative;
+    z-index: 9
 }
 
 .navbar-container__desktop {
