--- a/styles/style.css
+++ b/styles/style.css
@@ -40,14 +40,15 @@ h1 {
 
 .navbar-container__mobile {
     display: none;
+    position: fixed
 }
 
 .navbar-container__desktop {
     min-width: 290px;
     max-width: 290px;
-    border-right: solid 1px rgba(255, 255, 255, 0.1);
-    background-color: #000000;
+    border-right: solid 1px rgba(0, 0, 0, 0.1);
     padding: 60px 50px 103px;
+    background-color: #000000
 }
 
 .lista-navbar {
@@ -55,7 +56,9 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: #000000;
 }
+
 
 .lista-navbar a {
     height: 32px;
